added average page, added procedure and trigger files

--- a/graph.html
+++ b/graph.html
@@ -22,12 +22,12 @@
 		</div>
 	</div>
 	<form id="frm" style="inline">
-		Symbol: <input type="text" name="symbol">
-		Expiration Date: <input type="text" name="exp_date">
+		Symbol: <input type="text" name="symbol" style="color: black">
+		Expiration Date: <input type="text" name="exp_date" style="color: black">
 		<datalist id='exp_d'></datalist>
-		Strike Price <input type="text" name="strike">
+		Strike Price <input type="text" name="strike" style="color: black">
 		<datalist id='price'></datalist>
-		Type: <input type="text" name="type">
+		Type: <input type="text" name="type" style="color: black">
 		<button type="button" onclick="getData()">draw</button>
 		<button type="button" style="float: right">
 			Reset Graph
